2019-11-21	Michael Orlitzky <michael@orlitzky.com>

	* === Released 0.0.6 ===
	* Project forked to Github from SourceForge.
	* New autotools build system.
	* License situation clarified.
	* Better error message when the "hdaps" module is missing.
