@@ -1,3 +1,4 @@
 Patrick "Petschge" Kilian <petschge@web.de>
 Robert Love <rml@novell.com>
+Robert Jäschke <jaeschke@l3s.de>
 Michael Orlitzky <michael@orlitzky.com>
