@@ -1,3 +1,7 @@
+2019-11-21	Robert Jäschke <jaeschke@l3s.de>
+
+	* Added keyboard and fullscreen support.
+
 2019-11-21	Michael Orlitzky <michael@orlitzky.com>
 
 	* === Released 0.0.6 ===
